Mobile: set up this page on files

--- a/src/html/mobile/mobile-fifth-screen.html
+++ b/src/html/mobile/mobile-fifth-screen.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="content-item-img content-item-img-games4" src="img/mobile/games4.png" alt="games4"/>
+    <img class="content-item-imgBgd content-item-imgBgd4 content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+    <div class="item-block-num-blockright">
+      <img class="item-block-num item-block-num4 item-block-num-right" src="img/mobile/number4.png" alt="number4"/>
+    </div>
+
+
+    <div class="item-block-cont item-block-cont4 item-block-contRight">
+      <p class="item-block-title">Проработка геймплея</p>
+      <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>
+    </div>
+
+  </div>
+</div>
