--- a/src/html/mobile/mobile-first-screen.html
+++ b/src/html/mobile/mobile-first-screen.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<p class="page-title container">Разработка мобильных приложений и игр</p>
+
+@@include('html/all-pages/headerConsultation.html',{})
+
+<div class="page-description container">
+  <p class="page-description-text">Разработаем мобильное приложение или игру от идеи до релиза и отладки баланса на базе ios и android с возможностями многопоточности и API. У нас есть команда специалистов, которые смогут превратить вашу идею в прибыльный бизнес.</p>
+  <p class="page-description-text">При создании наши разработчики владеют навыками объектно-ориентированного программирования, языком программирования С# с использованием плагинов, а также анализируют психологию игроков, принципы баланса игры и иные нюансы геймдева.</p>
+</div>
