--- a/src/html/mobile/mobile-fourth-screen.html
+++ b/src/html/mobile/mobile-fourth-screen.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="item-block-num item-block-num-left" src="img/mobile/number3.png" alt="number3"/>
+
+    <div class="item-block-cont item-block-contLeft">
+      <p class="item-block-title">Среда разработки</p>
+      <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>
+    </div>
+
+    <img class="content-item-img-games3" src="img/mobile/games3-1.png" alt="games3-1"/>
+    <img class="content-item-img content-item-img-games32" src="img/mobile/games3-2.png" alt="games3-2"/>
+    <img class="content-item-imgBgd content-item-imgBgd3" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+  </div>
+</div>
