--- a/src/html/mobile/mobile-ninth-screen.html
+++ b/src/html/mobile/mobile-ninth-screen.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="mobile-tools container">
+  <p class="mobile-tools-title">Инструменты, с которыми мы работаем</p>
+  <div class="mobile-tools-gallery">
+    <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+    <img class="tools-gallery-item" src="img/mobile/tool1.svg" alt="tool1"/>
+    <img class="tools-gallery-item" src="img/mobile/tool2.svg" alt="tool2"/>
+    <img class="tools-gallery-item" src="img/mobile/tool3.svg" alt="tool3"/>
+    <img class="tools-gallery-item" src="img/mobile/tool4.svg" alt="tool4"/>
+    <img class="tools-gallery-item" src="img/mobile/tool5.svg" alt="tool5"/>
+    <img class="tools-gallery-item" src="img/mobile/tool6.svg" alt="tool6"/>
+    <img class="tools-gallery-item" src="img/mobile/tool7.svg" alt="tool7"/>
+    <img class="tools-gallery-item" src="img/mobile/tool8.svg" alt="tool8"/>
+    <img class="tools-gallery-item" src="img/mobile/tool9.svg" alt="tool9"/>
+    <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+  </div>
+</div>
