--- a/src/html/mobile/mobile-second-screen.html
+++ b/src/html/mobile/mobile-second-screen.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<p class="mobile-content-header container">Этапы разработки мобильной игры</p>
+
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="item-block-num item-block-num-left" src="img/mobile/number1.png" alt="number1"/>
+
+    <div class="item-block-cont item-block-contLeft">
+      <p class="item-block-title">Рождение идеи</p>
+      <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
+    </div>
+
+    <img class="content-item-img content-item-img-games1" src="img/mobile/games1.png" alt="games1"/>
+
+    <img class="content-item-imgBgd content-item-imgBgd1" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+  </div>
+</div>
