--- a/src/html/mobile/mobile-seventh-screen.html
+++ b/src/html/mobile/mobile-seventh-screen.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="content-item-img content-item-img-games6" src="img/mobile/games6.png" alt="games6"/>
+    <img class="content-item-imgBgd content-item-imgBgd6" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+
+    <div class="item-block-num-blockright">
+      <img class="item-block-num item-block-num6 item-block-num-right" src="img/mobile/number6.png" alt="number6"/>
+    </div>
+
+
+    <div class="item-block-cont item-block-cont6 item-block-contRight">
+      <p class="item-block-title">Геймдизайн</p>
+      <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>
+    </div>
+
+  </div>
+</div>
