--- a/src/html/mobile/mobile-sixth-screen.html
+++ b/src/html/mobile/mobile-sixth-screen.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="item-block-num item-block-num-left" src="img/mobile/number5.png" alt="number5"/>
+
+    <div class="item-block-cont item-block-contLeft">
+      <p class="item-block-title">Выбор платформы</p>
+      <p class="item-block-text">Android, iOS, кроссплатформенная</p>
+    </div>
+    <img class="content-item-img content-item-img-games5" src="img/mobile/games5.png" alt="games5"/>
+    <img class="content-item-imgBgd content-item-imgBgd5" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+  </div>
+</div>
