--- a/src/html/mobile/mobile-eighth-screen.html
+++ b/src/html/mobile/mobile-eighth-screen.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="item-block-num item-block-num-left" src="img/mobile/number7.png" alt="number7"/>
+    <div class="item-block-cont item-block-contLeft">
+      <p class="item-block-title">Тестирование</p>
+      <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
+    </div>
+    <img class="content-item-img content-item-img-games7" src="img/mobile/games7.png" alt="games7"/>
+    <img class="content-item-imgBgd content-item-imgBgd7" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+  </div>
+</div>
