--- a/src/html/mobile/mobile-tenth-screen.html
+++ b/src/html/mobile/mobile-tenth-screen.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="page-pros phone">
+  <div class="page-pros-container container">
+    <p class="page-pros-title">Плюсы работы с нами</p>
+    <div class="page-pros-items">
+      <div class="page-pros-item">
+        <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+        <p class="pros-item-header">Квалификация</p>
+        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+      </div>
+
+      <div class="page-pros-item">
+        <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
+        <p class="pros-item-header">Опыт более 12 лет</p>
+        <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+      </div>
+
+      <div class="page-pros-item">
+        <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
+        <p class="pros-item-header">Индивидуальный подход</p>
+        <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+      </div>
+
+      <div class="page-pros-item">
+        <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
+        <p class="pros-item-header">Максимальная прозрачность</p>
+        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+      </div>
+    </div>
+  </div>
+</div>
