--- a/src/html/mobile/mobile-third-screen.html
+++ b/src/html/mobile/mobile-third-screen.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="content-item">
+  <div class="content-item-cont container">
+
+    <img class="content-item-img content-item-img-games2" src="img/mobile/games2.png" alt="games2"/>
+    <img class="content-item-imgBgd content-item-imgBgd2" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+    <div class="item-block-num-blockRight">
+      <img class="item-block-num item-block-num2" src="img/mobile/number2.png" alt="number2"/>
+    </div>
+
+
+    <div class="item-block-cont item-block-contRight item-block-cont2">
+      <p class="item-block-title">Выбор жанра игры</p>
+      <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
+      <div class="page-list-item">
+        <svg class="list-item-img" >
+          <use href="#resize-horizontal-roundBlack"/>
+        </svg>
+        <span class="list-item-text">Hyper casual</span>
+      </div>
+      <div class="page-list-item">
+        <svg class="list-item-img" >
+          <use href="#resize-horizontal-roundBlack"/>
+        </svg>
+        <span class="list-item-text">Midcore</span>
+      </div>
+      <div class="page-list-item">
+        <svg class="list-item-img" >
+          <use href="#resize-horizontal-roundBlack"/>
+        </svg>
+        <span class="list-item-text">Hardcore</span>
+      </div>
+    </div>
+
+  </div>
+</div>
