CRM-implement: set up this page on files

--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -23,157 +23,11 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="crm-implement-bitrix">
-            <div class="page-description container">
-                <p class="page-description-title">Битрикс24 CRM</p>
-                <p class="page-description-text">Битрикс24 CRM, позволяющая продавать больше. Битрикс24 помогает как небольшим, так и крупным компаниям работать эффективнее, объединив в единой платформе десятки сервисов и приложений для организации работы всей компании.</p>
-                <p class="page-description-text">Наши сертифицированные специалисты имеют большой опыт в внедрении и доработке CRM от начала планирования до непосредственного внедрения и настройки.</p>
-            </div>
-        </div>
-
-        <div class="crm-implement-content">
-            <p class="content-header container">Пришло время оптимизации бизнеса!</p>
-            <div class="crm-implement-content-imgBlock">
-                <img class="crm-implement-content-imgMen" src="img/crm/office-man.png" alt="office-man"/>
-            </div>
-            <div class="container">
-                <div class="page-list-block">
-                    <p class="page-list-blueTitle">Почему Битрикс24?</p>
-                    <div class="page-list-list">
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Удобный функционал</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Огромный функционал для маркетинга, включая сквозную аналитику</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="crm-implement-rates">
-            <img class="crm-implement-rates-img" src="img/crm/bitrix-box.png" alt="bitrix"/>
-            <div class="crm-implement-rates-cont container">
-                <div class="crm-implement-rates-block">
-                    <p class="rates-header">Мы осуществляем 2 направления внедрения Битрикс24:</p>
-                    <div class="rates-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <p class="rates-title">Базовое внедрение Битрикс24</p>
-                        <p class="rates-text">(стандартный функционал внедрения)</p>
-                    </div>
-                    <div class="rates-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <p class="rates-title">Пакетное внедрение Битрикс24</p>
-                        <p class="rates-text">(индивидуальная разработка)</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="page-list-block page-list-bonuses container">
-            <p class="page-list-title">Бонусы</p>
-            <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
-                <span class="page-list-text">Введение и обучение сотрудников после внедрения</span>
-            </div>
-            <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
-                <span class="page-list-text">После внедрения вы получаете бесплатно 1 месяц технической поддержки и сопровождения</span>
-            </div>
-            <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
-                <span class="page-list-text">Настройка одной воронки продаж</span>
-            </div>
-            <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
-                <span class="page-list-text">Оптимизируем все процессы и взаимодействие сотрудников отделов между собой</span>
-            </div>
-            <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
-                <span class="page-list-text">Проведем автоматизацию системы</span>
-            </div>
-        </div>
-
-        <div class="page-pros">
-            <div class="page-pros-container container">
-
-                <p class="page-pros-title">Плюсы работы с нами</p>
-
-                <div class="page-pros-items">
-                    <div class="page-pros-item">
-                        <svg class="svg-calendar" width="30" height="34">
-                            <use href="#calendar"/>
-                        </svg>
-                        <p class="pros-item-header">Опыт более 12 лет</p>
-                        <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-qualification"  width="40" height="28">
-                            <use href="#qualification"/>
-                        </svg>
-                        <p class="pros-item-header">Квалификация сотрудников</p>
-                        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-transparency" width="42" height="30">
-                            <use href="#transparency"/>
-                        </svg>
-                        <p class="pros-item-header">Максимальная прозрачность</p>
-                        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-calendar" width="30" height="34">
-                            <use href="#calendar"/>
-                        </svg>
-                        <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                        <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-complex" width="38" height="40">
-                            <use href="#complex"/>
-                        </svg>
-                        <p class="pros-item-header">Индивидуальный подход</p>
-                        <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @@include('html/crm-implement/crm-implement-first-screen.html',{})
+        @@include('html/crm-implement/crm-implement-second-screen.html',{})
+        @@include('html/crm-implement/crm-implement-third-screen.html',{})
+        @@include('html/crm-implement/crm-implement-fourth-screen.html',{})
+        @@include('html/crm-implement/crm-implement-fifth-screen.html',{})
 
     </section>
 </main>
