AmoCrm: set up this page on files

--- a/src/amocrm.html
+++ b/src/amocrm.html
@@ -23,130 +23,10 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="page-description container">
-            <p class="page-description-text">Отличное решение для автоматизации вашего отдела продаж, который позволит не потерять ни одной заявки и мгновенно реагировать на них. Время – главный фактор качества общения с клиентами. Если вы отвечаете пользователю в течение 30 минут, то вы неплохо справляетесь, а если через неделю, то есть над чем работать.</p>
-            <p class="page-description-text">Исследования показывают положительную корреляцию между быстрым временем отклика и высоким уровнем удовлетворенности. По данным Forrester Research, 77% клиентов говорят, что экономия их времени — это самый важный фактор хорошего обслуживания в Интернете. С помощью amoCRM можно не только быстро реагировать на поступающие заявки, но и наладить связь с клиентом, максимально упростить его путь, сделав его быстрым, четким и простым.</p>
-        </div>
-
-        <div class="page-list-block">
-            <div class="page-list-block-block container">
-                <div class="page-list-block-cont">
-                    <p class="page-list-blueTitle">Почему amoCRM?</p>
-                    <p class="page-list-title">Консультации по Битрикс24 и AmoCRM, помощь в настройке портала</p>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Анализируем, консультируем и даем рекомендации по использованию инструментов Битрикс24 и amoCRM в Вашем портале;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Любые вопросы по настройке инструментов Битрикс24 и amoCRM и использованию портала</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Консультируем по версиям Битрикс24 и amoCRM;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настраиваем инструменты Битрикс24 и amoCRM по запросу.</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Помощь в настройке роботов автоматизации</span>
-                    </div>
-
-                    <p class="page-list-title">Администрирование и настройка вашего сервера</p>
-
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настройка сервера под требования коробочной версии Битрикс24 и amoCRM без проблем и ошибок;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настройка резервного копирования;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Регулярные проверки и мониторинг;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Миграция из облака в коробку и т.д.</span>
-                    </div>
-                </div>
-                <div class="page-list-block-div"></div>
-            </div>
-<!--            <img src="img/amocrm/girl-amocrm.png" alt="girl_amoCRM"/>-->
-        </div>
-
-
-        <div class="page-list-block-bgd">
-            <div class="page-list-block-bonuses container">
-                <p class="page-list-title-bonuses">Бонусы</p>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Введение и обучение сотрудников после внедрения</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">После внедрения вы получаете бесплатно 1 месяц технической поддержки и сопровождения</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Настройка одной воронки продаж</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Оптимизируем все процессы и взаимодействие сотрудников отделов между собой</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Проведем автоматизацию системы</span>
-                </div>
-            </div>
-        </div>
-
-
-            <div class="page-pros-container container">
-                <p class="page-pros-title">Плюсы работы с нами</p>
-
-                <div class="page-pros-items">
-                    <div class="page-pros-item">
-                        <svg class="svg-calendar" width="30" height="34">
-                            <use href="#calendar"/>
-                        </svg>
-                        <p class="pros-item-header">Опыт более 12 лет</p>
-                        <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-qualification"  width="40" height="28">
-                            <use href="#qualification"/>
-                        </svg>
-                        <p class="pros-item-header">Квалификация сотрудников</p>
-                        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-transparency" width="42" height="30">
-                            <use href="#transparency"/>
-                        </svg>
-                        <p class="pros-item-header">Максимальная прозрачность</p>
-                        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-calendar" width="30" height="34">
-                            <use href="#calendar"/>
-                        </svg>
-                        <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                        <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
-                    </div>
-                    <div class="page-pros-item">
-                        <svg class="svg-complex" width="38" height="40">
-                            <use href="#complex"/>
-                        </svg>
-                        <p class="pros-item-header">Индивидуальный подход</p>
-                        <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                    </div>
-                </div>
-            </div>
+        @@include('html/amocrm/amocrm-first-screen.html',{})
+        @@include('html/amocrm/amocrm-second-screen.html',{})
+        @@include('html/amocrm/amocrm-third-screen.html',{})
+        @@include('html/amocrm/amocrm-fourth-screen.html',{})
 
     </section>
 
