Analysis: set up this page on files

--- a/src/analysis.html
+++ b/src/analysis.html
@@ -23,139 +23,10 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="page-description container">
-            <p class="page-description-text">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</p>
-        </div>
-
-        <div class="analysis-modeling">
-            <div class="analysis-modeling-cont container">
-                <img class="analysis-modeling-img phone" src="./img/analysis/grafik-phone.png" alt="grafik-phone">
-
-                <div class="modeling-block-text">
-                    <p class="analysis-modeling-title">Анализ</p>
-                    <p class="analysis-modeling-text">предметной области и бизнес‒ моделирование:</p>
-                </div>
-
-                <div class="modeling-block-block">
-                    <div class="modeling-block-btns">
-                        <div class="modeling-btn modeling-btn1 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Установление коммуникации с клиентом.</div>
-                        <div class="modeling-btn modeling-btn2 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Детальный анализ предметной области.</div>
-                        <div class="modeling-btn modeling-btn3 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Разработка терминологического глоссария.</div>
-                        <div class="modeling-btn modeling-btn4 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Речение задач по изучению, моделированию и оптимизации бизнес-процессов.</div>
-                        <div class="modeling-btn modeling-btn5 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Определение, анализ и классификация заинтересованных лиц.</div>
-                        <div class="modeling-btn modeling-btn6 modeling-btn-text-start">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Создание модели, описывающей ключевых участников.</div>
-                    </div>
-                    <div class="modeling-btn modeling-btn7">
-                         <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        Выявление иерархии всех уровней и целей решаемой програмной задачи.</div>
-                    <div class="modeling-block-btns">
-                        <div class="modeling-btn modeling-btn8 modeling-btn-text-end">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Подготовка спецификации требований разрабатываемого ПО (составление SRS).</div>
-                        <div class="modeling-btn modeling-btn9 modeling-btn-text-end">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Создание модели функциональных требований к пользователям системы.</div>
-                        <div class="modeling-btn modeling-btn10 modeling-btn-text-end">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Решение задач, связанных с определением и согласованием границ разработки.</div>
-                        <div class="modeling-btn modeling-btn11 modeling-btn-text-end">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Отработка генеральной концепции программной среды (Vision).</div>
-                        <div class="modeling-btn modeling-btn12 modeling-btn-text-end">
-                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            Разработка кратких сценариев для каждого программного сервиса решения.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="analysis-useCase">
-            <div class="analysis-useCase-cont container">
-                <p class="analysis-useCase-title">Анализ требований с построением Use Case модели:</p>
-                <div class="analysis-useCase-block">
-                    <div class="analysis-useCase-block-1">
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Выявляют функции программной системы, которые отвечают за бизнес-логику и обеспечивают трассируемость функциональных требований.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Детально описывают потоки событий в каждом из сценариев бизнес-логики.</span>
-                        </div>
-                    </div>
-                    <div class="analysis-useCase-block-1">
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Выстраивают Use Case-модель программной системы.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Используя инструменты прототипирования Axsure и Balsaminq, создают эффективные прототипы экранных форм.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Проверяют сценарии и прототипы экранных форм на соответствие требованиям заказчика.</span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-        <div class="page-pros-container container">
-            <p class="page-pros-title">Плюсы работы с нами</p>
-
-            <div class="page-pros-items">
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Опыт более 12 лет</p>
-                    <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-qualification"  width="40" height="28">
-                        <use href="#qualification"/>
-                    </svg>
-                    <p class="pros-item-header">Квалификация сотрудников</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-transparency" width="42" height="30">
-                        <use href="#transparency"/>
-                    </svg>
-                    <p class="pros-item-header">Максимальная прозрачность</p>
-                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                    <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-complex" width="38" height="40">
-                        <use href="#complex"/>
-                    </svg>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                </div>
-            </div>
-        </div>
+        @@include('html/analysis/analysis-first-screen.html',{})
+        @@include('html/analysis/analysis-second-screen.html',{})
+        @@include('html/analysis/analysis-third-screen.html',{})
+        @@include('html/analysis/analysis-fourth-screen.html',{})
 
     </section>
 </main>
